# pv-site-production

./: .all-contributorsrc  .bumpversion.cfg  .dockerignore  .env.dist  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  configuration_sample.yaml  pyproject.toml  requirements.txt
.github/workflows/: branch_ci.yml  build-db-backup-and-clean-docker.yaml  build-docker.yaml  build-dockers.yaml  build-forecast-archive.yaml  build-inference-docker.yaml  db-clean-backup-build.yaml  lint.yml  merged_ci.yml  pv-site-prediction-ci.yaml  release-docker.yml  release-dockers.yaml  tagged_ci.yml  test-and-lint-inference.yaml  test-and-lint.yaml  test-docker.yaml
configurations/: aws_conf.yaml  aws_config.yaml
database-cleanup/: Makefile  README.md  pyproject.toml
database-cleanup/database_cleanup/: app.py  save.py
database-cleanup/tests/: conftest.py  test_app.py
forecast-archive/: Makefile  README.md  pyproject.toml
forecast-archive/forecast_archive/: app.py  patate.py
forecast-archive/tests/: conftest.py  test_app.py  test_patate.py
forecast-inference/: Makefile  README.md  aws_config.yaml  pyproject.toml
forecast-inference/forecast_inference/: _db_helpers.py  app.py
forecast-inference/forecast_inference/data/: nwp.py  nwp_data_sources.py  pv_data_sources.py
forecast-inference/forecast_inference/models/: psp.py
forecast-inference/forecast_inference/models/cos/: cos_model.py
forecast-inference/forecast_inference/scripts/: live_eval_model.py
forecast-inference/forecast_inference/utils/: geospatial.py  imports.py  testing.py
forecast-inference/notebooks/: database-exploration.ipynb  live_eval_model.ipynb
forecast-inference/tests/: conftest.py  test_app.py
forecast-inference/tests/fixtures/: psp_model_fixture.pkl
forecast-inference/tests/fixtures/model_configs/: cos.yaml  psp.yaml
forecast-inference/tests/fixtures/nwp_fixture.zarr/x/: .zarray
forecast-inference/tests/models/: test_psp.py
forecast-inference/tests/models/cos/: test_cos_model.py
forecast-inference/tests/scripts/: test_live_eval_model.py
forecast-inference/tests/utils/: test_config.py
inference/: Makefile  README.md  aws_config.yaml  pyproject.toml
inference/pv_site_production/: app.py
infrastructure/: Dockerfile  Dockerfile.database-cleanup  Dockerfile.forecast-archive  Dockerfile.forecast-inference  Dockerfile.inference  test-docker-compose.yml
infrastructure/inference/: Dockerfile
pv-site/: Makefile  README.md  database-exploration.ipynb  pyproject.toml
pv-site/notebooks/: database-exploration.ipynb
pv-site/pv_site/: _db_helpers.py
pv-site/pv_site/scripts/: live_eval_model.py
pv_site_production/: app.py  schemas.py
pv_site_production/data/: nwp_data_sources.py  pv_data_sources.py
pv_site_production/models/: common.py  psp.py
pv_site_production/models/cos/: configuration.yaml  cos_model.py  intensities.py
pv_site_production/models/psp/: __init__.py  psp_model.py
pv_site_production/models/pv_nwp/: configuration.yaml  load.py  nwp_pv.py
pv_site_production/scripts/: apply_model.py
pv_site_production/utils/: config.py  imports.py  profiling.py
py/pv_site_production/: Makefile  pyproject.toml  schemas.py
py/pv_site_production/data/: pv_data_sources.py
py/pv_site_production/pv_site_production/: __init__.py
py/pv_site_production/tests/: test_app.py
py/pv_site_production/tests/fixtures/: psp_model_fixture.pkl
py/pv_site_production/tests/fixtures/model_configs/: psp.yaml
py/pv_site_production/tests/fixtures/nwp_fixture.zarr/step/: .zarray  0
py/pv_site_production/tests/models/: test_psp.py
py/pv_site_production/utils/: imports.py
services/db-clean-backup/: Dockerfile
services/inference/: Dockerfile  aws_config.yaml
tests/: conftest.py  test_app.py
tests/fixtures/: psp_model_fixture.pkl  pv_fixture.netcdf  pv_metadata.csv
tests/fixtures/model_configs/: cos.yaml  psp.yaml
tests/fixtures/nwp_fixture.zarr/: .zmetadata
tests/fixtures/nwp_fixture.zarr/UKV/: .zarray  0.0.0.0.0
tests/fixtures/nwp_fixture.zarr/init_time/: .zarray
tests/fixtures/nwp_fixture.zarr/step/: .zarray
tests/fixtures/nwp_fixture.zarr/variable/: .zarray  0
tests/fixtures/nwp_fixture.zarr/x/: .zarray  0
tests/fixtures/nwp_fixture.zarr/y/: .zarray  0
tests/model/cos/: test_fake_cos.py
tests/model/nwp_pv/: test_nwp_pv.py  test_nwp_pv_load.py
tests/models/: test_common.py  test_psp.py
tests/models/cos/: test_cos_model.py  test_fake_cos.py
tests/models/nwp_pv/: test_nwp_pv.py
tests/models/psp/: test_psp.py
tests/scripts/: test_apply_model.py
tests/utils/: test_config.py
