[tool.poetry]
name = "pv-site-production"
version = "0.1.9"
description = ""
authors = ["Peter Dudfield"]
readme = "README.md"
packages = [{include = "pv_site_production"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandera = "^0.13.4"
pandas = "^1.5.2"
s3fs = "^2022.11.0"
python-dotenv = "^0.21.1"
sqlalchemy = "^1.4.46"
nowcasting-datamodel = "^1.1.62"
psp = {path = "pv-site-prediction", develop = true}


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
ipython = "^8.8.0"
pydocstyle = "^6.3.0"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.pydocstyle]
convention = 'google'
add-ignore = 'D200,D202,D210,D212,D415,D105'
