[tool.poetry]
name = "pv-site-production"
version = "0.1.21"
description = ""
authors = ["Peter Dudfield"]
readme = "README.md"
packages = [{include = "pv_site_production"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandera = "^0.13.4"
pandas = "^1.5.2"
s3fs = "^2022.11.0"
python-dotenv = "^0.21.1"
sqlalchemy = "^1.4.46"
psp = {path = "pv-site-prediction", develop = true}
pvsite-datamodel = "^0.1.19"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
ipython = "^8.8.0"
pydocstyle = "^6.3.0"
testcontainers = "^3.7.1"
pandas-stubs = "^1.5.2.230105"
types-pyyaml = "^6.0.12.3"
sqlalchemy-stubs = "^0.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = 'black'
line_length = 100

[tool.pydocstyle]
convention = 'google'
add-ignore = 'D200,D202,D210,D212,D415,D105'

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
