[tool.poetry]
name = "database-cleanup"
version = "0.1.37"
description = ""
authors = ["Open Climate Fix"]
packages = [{include = "database_cleanup"}]

[tool.poetry.dependencies]
python = "^3.10"
pvsite-datamodel = "^0.1.32"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"
ipython = "^8.11.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
