[tool.poetry]
name = "database-cleanup"
version = "1.0.24"
description = ""
authors = ["Open Climate Fix"]
packages = [{include = "database_cleanup"}]

[tool.poetry.dependencies]
python = "^3.11"
pvsite-datamodel = "^1.0.43"
click = "^8.1.3"
sentry-sdk = "^2.1.1"
setuptools = "^75.1.0"
fsspec = "^2024.10.0"
numpy = "1.26.4"
s3fs = "^2024.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"
ipython = "^8.11.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
testcontainers = "^3.7.1"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
