[tool.poetry]
name = "forecast-inference"
version = "1.0.7"
description = ""
authors = ["Peter Dudfield"]
packages = [{include = "forecast_inference"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5.2"
s3fs = "^2022.11.0"
python-dotenv = "^0.21.1"
sqlalchemy = ">=2.0"
pv-site-prediction = ">=0.1.19"
pvsite-datamodel = "^1.0.28"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
black = {version = "^22.12.0", extras = ["jupyter"]}
isort = "^5.11.4"
flake8 = "^6.0.0"
ipython = "^8.8.0"
pydocstyle = "^6.3.0"
testcontainers = "^3.7.1"
pandas-stubs = "^2.0.0.230412"
types-pyyaml = "^6.0.12.3"
mypy = "^1.2.0"
freezegun = "^1.2.2"
jupyter = "^1.0.0"
altair = "^4.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = 'black'
line_length = 100

[tool.pydocstyle]
convention = 'google'
add-ignore = 'D200,D202,D210,D212,D415,D105'

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
plugins = 'sqlalchemy.ext.mypy.plugin'
