[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast_inference"
description = "App for running forecast inference for pv sites"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT License"}
authors = [
    {name = "Open Climate Fix", email = "info@openclimatefix.org"},
]
dependencies = [
    "pandas==2.2.3",
    "s3fs==2022.11.0",
    "python-dotenv==0.21.1",
    "sqlalchemy",
    "pv-site-prediction==0.1.20",
    "pvsite-datamodel==1.2.0",
    "sentry-sdk==2.1.1",
    "pytest",
    "freezegun",
    "testcontainers",
    "ruff",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
"flake8",
"pydocstyle",
"pandas-stubs",
"types-pyyaml",
"mypy",
"jupyter",
"altair",
]

[project.urls]
repository = "https://github.com/openclimatefix/pv-site-production"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dirty_template = "{tag}"


[tool.setuptools.packages.find]
exclude = ["notebook*"]

[tool.ruff]
exclude = ["notebooks"]

# --- TESTING CONFIGURATION --- #

[tool.pytest.ini_options]
testpaths = ["tests"]




